--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 <body>
 
 <!-- HEADER SECTION -->
-<header></header>
+<header class="container my-3">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-bold">AI Universe <span class="text-danger">HUB</span></a>
+          <form class="d-flex">
+            <img class="rounded-circle border border-3 border-danger" height="40px" width="40px" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1780&q=80" alt="">  
+          </form>
+        </div>
+      </nav>
+
+      <h2 class="text-center my-3 ">Ai Universe <span class="text-danger">Hub</span></h2>
+      <div class="text-center">
+        <button class="text-center btn btn-danger fw-bold shadow">Sort by Date</button>
+      </div>
+</header>
 
 <!-- MAIN SECTION -->
 <main></main>
