Show more button function complated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div class="text-center my-4">
+    <div id="see-more"  class="text-center my-4">
         <button class="text-center btn btn-danger fw-bold shadow">Show More</button>
     </div>
 </main>
