--- a/index.html
+++ b/index.html
@@ -28,13 +28,26 @@
 
 <!-- MAIN SECTION -->
 <main class="container">
+
+    <!-- ------------------------------- Card Container ------------------------------>
     <div id="card-container" class="row row-cols-1 row-cols-md-3">
 
     </div>
 
+    <!-- ------------------------------- Show More Btn ---------------------------->
     <div id="see-more"  class="text-center my-4">
         <button class="text-center btn btn-danger fw-bold shadow">Show More</button>
     </div>
+
+    <!-- ------------------------------- Spinner ------------------------------- -->
+    <section id="spinner-section" class="d-none mb-5">
+        <div style="height: 100px" class="d-flex justify-content-center">
+            <div class="spinner-border text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </section>
+</main>
 </main>
 
 <!-- FOOTER SECTION -->
