Sort BY Date function added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <!-- --------------------------- Sort By Date Button ------------------------>
       <div class="text-center">
-        <button class="text-center btn btn-danger fw-bold shadow">Sort by Date</button>
+        <button id="sort-btn" class="text-center btn btn-danger fw-bold shadow">Sort by Date</button>
       </div>
 </header>
 
